Revision history for Net::DNS                                     -*-text-*-
=============================


*** 0.54 December 7, 2005


Fix rt.cpan.org 15947

  Failure to bind a nameserver when specifying an IPv6 address.

Fix rt.cpan.org 11931

  Using Net-DNS 0.53 on Win XP, it is unable to retrieve the
  nameservers when the IP address of the interface is assigned by
  DHCP.  This is due to the DHCP assigned IP address being stored in
  DhcpIPAddress rather than IPAddress (which is then 0.0.0.0).  Adding
  a check of DhcpIPAddress existance and not being 0.0.0.0 fixes the
  problem.  Applied the patch submitted by "orjan". 

Fix rt.cpan.org 15119

  main_loop() consumed 100% of memory, because of a bug that
  couced loop_once() to loop ad infinitum.

Fix rt.cpan.org 15299

  Defining multiple constants with 'use constant { BLA => 1, FOO =>2 };
  is a backwards incompatible feature. Thanks to Ian White for spotting and
  fixing this.

*** 0.53_02 Oct 18, 2005



Fix rt.cpan.org 14046

  RRSIGs verify and create failed fror a number of RR types. The 
  error message showed something like:
      Can't call method "dn_comp" on an undefined value 
  This was caused by an ommission in the _canonicalRdata() method
  in Net::DNS::RR that was inherited by all failing RR types.

  Code was added to t/05-rr.t that will test signature creation
  if Net::DNS::SEC is available and can be loaded.


Feature async nameserver behaviour.
  
   In rt.cpan.org 14622 Robert Stone suggested:

      The fact that it needs to take over the main runnning thread
      limits its audience.  Since many daemon programs are already
      driven by a top level select loop, it seems useful to provide an
      API for the user to integrate Net::DNS::Nameserver processing to
      their own select loop.

   He also supplied example code for which he is hereby acknowledged.
   The patch was not used because simultaneously Robert Martin-Legene